[LOG] Correction sur erreur de variable PATH et PAHT

--- a/config/config.dist
+++ b/config/config.dist
@@ -49,14 +49,6 @@ bdd_m_name="xxxxxx"
 
 ###################################################################################################################
 #
-# CHEMIN
-#
-###################################################################################################################
-############# CHEMIN
-#Configuration du chemin des scripts
-
-###################################################################################################################
-#
 # LOG
 #
 ###################################################################################################################
@@ -64,6 +56,15 @@ bdd_m_name="xxxxxx"
 FICLOGNAMEINST=$DATEFILOG"-INST.log"
 FICLOGNAME="$DATEFILOG.log"
 
+###################################################################################################################
+#
+# CHEMIN
+#
+###################################################################################################################
+############# CHEMIN
+#Configuration du chemin des scripts
+PATHDEST_REPLOG=LOG
+PATHDEST_FICLOG=$PATHDEST_REPLOG/$FICLOGNAME
 ###################################################################################################################
 #
 # EMAIL
