--- a/CREA_VM/tpl/provisioning.sh.sample
+++ b/CREA_VM/tpl/provisioning.sh.sample
@@ -145,5 +145,8 @@ if [ $? -eq 0 ]; then
 	apt-get install openhab-addon-io-dropbox
 	printMessageTo  " Ajout utilisateur openhab" "2"
 	usermod -a -G dialout openhab
-	printMessageTo  " http://localhost:8080/openhab.app?sitemap=yourname" "3"
+	printMessageTo  " Lister les interfaces reseaux	 " "2"
+	ifconfig | perl -nle 's/dr:(\S+)/print $1/e'
+	INTERADDRIP=`ip addr | grep 'state UP' -A2 | tail -n1 | awk '{print $2}' | cut -f1  -d'/'`
+	printMessageTo  " http://$INTERADDRIP:8080/openhab.app?sitemap=yourname" "3"
 fi
